# anomaly_detection

./: .gitignore  CLAUDE.md  DOCS.md  README.md  check_results.py  create_dataset.py  dataset.py  main.py  mkdocs.yml  monitor_experiments.py  pyproject.toml  requirements.txt  shap.py  shap_plot.py  test_numbers.py  test_run_experiments.py  train.py  visualize_dataset.py
.github/workflows/: docs.yml
archive/: draw.py  draw_architecture.py  draw_graph.py  draw_predicts.py  gcn_lstm.py  graph_conv.py  regressor.py  spatio_temporal.py  spatio_temporal_train.py
archive/models1/: __init__.py  visualization.py
archive/models2/: datasets.py  forecast.py  train.py
config/: config.py  gcn_config.yaml  linear_models.yaml  reality_mining.yaml  synthetic_data.yaml  template.yaml
data/: README.md
docs/: algorithm.md  index.md  usage.md
docs/design/: backend.md  choices.md
docs/javascripts/: mathjax.js
docs/results/: figure1.md  figure2.md  table3.md  table4.md
docs/theory/: attribution.md  forecasting.md  horizon.md  index.md  martingale.md
examples/: direct_martingale_visualization.py  feature_visualization.py  martingale_multiview_visualization.py  martingale_visualization.py  multiview_martingale_visualization.py  network_visualization.py
experiments/: README.md  figure1_mit.py  figure2.py  linear_models.py  main.py  metrics.py  predict_changepoints.py  reality_mining_data.py  run_table3.py  run_table4.py  synthetic_data.py  test_model_components.py  threshold.py
experiments/config/: __init__.py  config.py  linear_models.yaml  reality_mining.yaml  synthetic_data.yaml
experiments/utils/: __init__.py  log_handling.py  rm_evaluator.py  sd_visualizer.py
hmd/: __init__.py  _backend.py  attribution.py  baselines.py  betting.py  conformal.py  detector.py  features.py  forecaster.py  martingale.py
hmd/data/: __init__.py  mit_reality.py  synthetic.py
src/: algorithm.py  algorithm.yaml  analysis.py  compare.py  create_dataset.py  dataset.py  dataset_config.yaml  main.py  output_manager.py  parameter_study.py  plot_comparisons.py  run.py  run_combinations.py  run_experiments.py  run_grid_search.py  run_parameter_sweep.py  run_trials.py  runner.py  test_detection_timing.py
src/changepoint/: README.md  __init__.py  baselines.py  betting.py  bitting.py  bittings.py  conformal.py  cusum.py  detector.py  distance.py  ewma.py  martingale.py  martingale_base.py  utils.py  (+6 more)
synthetic_data/: README.md  concat.py  create_dataset.py  create_graph_sequences.py  create_graphs.py  dataset.py  dataset_config.yaml  dataset_inspection.txt  extract_features.py  graph_config.yaml  inspect_dataset.py  main.py  martingale_config.yaml  visualize_dataset.py  visualize_graphs.py  visualize_martingales.py
tests/: NOTES.md  README.md  conftest.py  create_ba_graphs.py  create_er_graphs.py  create_nw_graphs.py  feature_visualization.py  linear_models.py  martingale_multiview_visualization.py  martingale_singleview_visualization.py  network_visualization.py  predict_changepoints.py  reality_mining_data.py  synthetic_data.py  test_attribution.py  test_baselines.py  test_betting_calibration.py  test_changepoint.py  test_conformal_uniformity.py  test_dataset.py  test_detection_timing.py  test_detector.py  test_detector_joint_mode.py  test_detector_smoke.py  test_features.py  test_graph.py  test_graph_visualization.py  test_horizon_mixture.py  test_martingale_ba.py  test_martingale_property.py  test_martingale_recurrence.py  test_martingale_visualization.py  test_predictor.py  test_predictor_features.py  test_predictor_metrics.py  test_spatiotemporal.py  test_strangeness.py  test_synthetic_generators.py  test_threshold.py  test_visualization.py  (+8 more)
(+256 files in other folders)
